AE-2365: Bumping up default PermGen for spark driver in yarn-cluster mode